# chorus-audio-plugin

./: Cargo.toml
plugins/chorus/: Cargo.toml
plugins/chorus/src/: editor.rs  lib.rs
plugins/my_plugin/: Cargo.toml
plugins/my_plugin/src/: main.rs
