[package]
name = "chorus"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]    # build as a plugin library

[dependencies]
nih_plug = { path = "/Users/miclo/Desktop/GitProjects/rust-audio-plugin/chorus-audio-plugin" }
nih_plug_egui = { path = "/Users/miclo/Desktop/GitProjects/rust-audio-plugin/chorus-audio-plugin/nih_plug_egui" }